# F1-Race-Strategy-Intelligence-Engine

./: .env.example  .gitignore  .gitlab-ci.yml  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_2_README.md  QUICK_START.md  README.md  VERIFICATION_FIXES.md  VERIFICATION_IMPLEMENTATION.md  VERIFICATION_RESPONSE.md  VERIFICATION_SUMMARY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-frontend.yml  train-models.yml
api/: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  auth.py  config.py  dependencies.py  main.py  pytest.ini  requirements.txt  run.py
api/middleware/: __init__.py  rate_limiter.py
api/schemas/: common.py  predictions.py  race.py  simulation.py
api/tests/: conftest.py  test_auth.py  test_health.py  test_integration.py  test_predictions.py  test_simulation.py  test_strategy.py
api/utils/: __init__.py  cache.py  validators.py
app/: __init__.py
app/utils/: __init__.py  logger.py  time_utils.py  validators.py
config/: __init__.py  decision_engine.yaml  development.yaml  features.yaml  models.yaml  production.yaml  settings.py  simulation.yaml  staging.yaml  tire_compounds.yaml  tracks.yaml
config/models/: ensemble_config.yaml  lap_time_ensemble_config.yaml  lap_time_lightgbm_config.yaml  lap_time_training_config.yaml  lap_time_xgboost_config.yaml  lightgbm_config.yaml  pit_stop_loss_ensemble_config.yaml  pit_stop_loss_lightgbm_config.yaml  pit_stop_loss_training_config.yaml  pit_stop_loss_xgboost_config.yaml  safety_car_ensemble_config.yaml  safety_car_lightgbm_config.yaml  safety_car_training_config.yaml  safety_car_xgboost_config.yaml  training_config.yaml  xgboost_config.yaml
data/cache/: .gitkeep
data/features/: .gitkeep
data/metadata/: .gitkeep
data/processed/: .gitkeep
data/quarantine/: .gitkeep
data/raw/: .gitkeep
data/sample/: historical_race_sample.json  safety_car_sample.json  telemetry_sample.json  timing_sample.json  weather_sample.json
data_pipeline/: Dockerfile  __init__.py  orchestrator.py
data_pipeline/base/: __init__.py  base_ingestor.py  qa_engine.py  storage_manager.py
data_pipeline/ingestors/: __init__.py  historical_ingestor.py  safety_car_ingestor.py  telemetry_ingestor.py  timing_ingestor.py  weather_ingestor.py
data_pipeline/mock/: __init__.py  mock_safety_car_generator.py  mock_telemetry_generator.py  mock_timing_generator.py  mock_weather_generator.py
data_pipeline/schemas/: __init__.py  historical_schema.py  safety_car_schema.py  telemetry_schema.py  timing_schema.py  weather_schema.py
data_pipeline/utils/: __init__.py  metrics.py  versioning.py
decision_engine/: __init__.py  base.py  engine.py  explainer.py  offset_strategy.py  pace_monitoring.py  pit_timing.py  rain_strategy.py  registry.py  safety_car_decision.py  schemas.py  scoring.py  strategy_conversion.py  undercut_overcut.py
docs/: SETUP_GUIDE.md  SIMULATION_GUIDE.md  SIMULATION_MATH.md
docs/architecture/: system_overview.md
docs/data_pipeline/: DATA_SCHEMAS.md  INGESTION_GUIDE.md
docs/decision_engine/: ARCHITECTURE.md  DECISION_ENGINE_GUIDE.md
docs/features/: FEATURE_ENGINEERING.md  FORMULAS.md
docs/models/: LAP_TIME_MODEL.md  MODEL_TRAINING_GUIDE.md  PIT_STOP_LOSS_MODEL.md  SAFETY_CAR_MODEL.md  TIRE_DEGRADATION_MODEL.md  __init__.py
docs/schemas/: data_schemas.md  schema_examples.md
features/: __init__.py  base.py  batch_engine.py  degradation_features.py  pace_features.py  pitstop_features.py  registry.py  safety_car_features.py  stint_features.py  store.py  streaming_engine.py  telemetry_features.py  tire_features.py  traffic_features.py  utils.py  weather_features.py
frontend/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/tests/: dashboard.spec.ts
models/: Dockerfile  __init__.py
models/lap_time/: __init__.py  base.py  data_preparation.py  ensemble_model.py  evaluation.py  fallback.py  inference.py  lightgbm_model.py  registry.py  training.py  xgboost_model.py
models/pit_stop_loss/: __init__.py  base.py  data_preparation.py  ensemble_model.py  evaluation.py  fallback.py  inference.py  lightgbm_model.py  registry.py  training.py  xgboost_model.py
models/registry/: .gitkeep
models/safety_car/: base.py  (+10 more)
scripts/: Dockerfile.scheduler  cleanup_old_data.py  cleanup_old_models.py  compute_features.py  download_historical_data.py  health_check.py  run_decision_engine.py  run_ingestion.py  run_simulation.py  setup_db.py  train_all.py  train_lap_time.py  train_pit_stop_loss.py  train_safety_car.py  train_tire_degradation.py
simulation/: __init__.py  core.py  monte_carlo.py  race_state.py  schemas.py  strategy_tree.py  what_if.py
tests/: __init__.py
(+136 files in other folders)
